@@ -67,6 +67,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 11331) Add buildConcat() and use CASE not IF for DB compatibility. Make oldimage 
   cascade delete via image table for Postgres, change fa_storage_key TEXT.
 * (bug 11438) Live Preview chops returned text
+* (bug 8376) Special:Newpages accepts namespace in subpage form
+* Make input form of Special:Newpages nicer for RTL wikis
+* Fix namespace selection after submit of Special:Newpages
 
 === API changes in 1.12 ===
 
